crates/syntax/src/parser/snapshots/mu_syntax__parser__tests__binary_expr.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Binary(
    Binary {
        op: Add,
        left: GetVar(
            GetVar {
                name: "a",
            },
        ),
        right: GetVar(
            GetVar {
                name: "b",
            },
        ),
    },
)
