crates/syntax/src/parser/snapshots/mu_syntax__parser__tests__call_expr-2.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Module {
    imports: [],
    body: [
        Expr(
            Call(
                Call {
                    target: GetVar(
                        GetVar {
                            name: "a",
                        },
                    ),
                    args: Args {
                        pos: [
                            GetVar(
                                GetVar {
                                    name: "b",
                                },
                            ),
                            GetVar(
                                GetVar {
                                    name: "c",
                                },
                            ),
                        ],
                        kw: [
                            (
                                "d",
                                GetVar(
                                    GetVar {
                                        name: "e",
                                    },
                                ),
                            ),
                            (
                                "f",
                                GetVar(
                                    GetVar {
                                        name: "g",
                                    },
                                ),
                            ),
                        ],
                    },
                },
            ),
        ),
        Expr(
            Call(
                Call {
                    target: GetVar(
                        GetVar {
                            name: "a",
                        },
                    ),
                    args: Args {
                        pos: [
                            GetVar(
                                GetVar {
                                    name: "b",
                                },
                            ),
                            GetVar(
                                GetVar {
                                    name: "c",
                                },
                            ),
                        ],
                        kw: [
                            (
                                "d",
                                GetVar(
                                    GetVar {
                                        name: "e",
                                    },
                                ),
                            ),
                            (
                                "f",
                                GetVar(
                                    GetVar {
                                        name: "g",
                                    },
                                ),
                            ),
                        ],
                    },
                },
            ),
        ),
    ],
}
