crates/syntax/src/parser/snapshots/mu_syntax__parser__tests__check-2.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Module {
    imports: [
        Import {
            path: [
                "a",
            ],
            alias: Some(
                "x",
            ),
        },
        Import {
            path: [
                "a",
                "b",
            ],
            alias: Some(
                "x",
            ),
        },
        Import {
            path: [
                "a",
                "b",
                "c",
            ],
            alias: Some(
                "x",
            ),
        },
        Import {
            path: [
                "a",
                "b",
            ],
            alias: Some(
                "x",
            ),
        },
        Import {
            path: [
                "a",
                "c",
            ],
            alias: Some(
                "y",
            ),
        },
        Import {
            path: [
                "a",
                "b",
                "c",
            ],
            alias: Some(
                "x",
            ),
        },
        Import {
            path: [
                "a",
                "d",
                "e",
            ],
            alias: Some(
                "y",
            ),
        },
        Import {
            path: [
                "a",
                "b",
            ],
            alias: Some(
                "x",
            ),
        },
        Import {
            path: [
                "c",
                "d",
            ],
            alias: Some(
                "y",
            ),
        },
        Import {
            path: [
                "a",
            ],
            alias: Some(
                "x",
            ),
        },
        Import {
            path: [
                "b",
            ],
            alias: Some(
                "y",
            ),
        },
        Import {
            path: [
                "c",
            ],
            alias: Some(
                "z",
            ),
        },
    ],
    body: [],
}
