crates/syntax/src/parser/snapshots/mu_syntax__parser__tests__class_self_and_super-2.snap
---
source: crates/syntax/src/parser/tests.rs
expression: errors
---
[31merror[0m: cannot access `self` outside of class method
[34m>[0m code:1
[34m|[0m 
[34m|[0m [31;4mself[0m
[34m|[0m 


